--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyData_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyData_CL.adoc
@@ -30,7 +30,7 @@ public abstract class PowerOfAttorneyData
 |Возвращает строковое представление поручителя
 |`GetPowerOfAttorneyMachineReadableFileID()`
 |Возвращает сформированное имя файла доверенности
-|`pGetRepresentative()`
+|`GetRepresentative()`
 |Возвращает строковое представление представителя в формате ФИО (или ФИ) -- для физического лица, или названия организации -- для юридического лица
 |`GetRepresentativesPowers()`
 |Возвращает полномочия представителя
