--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData_CL.adoc
@@ -41,3 +41,70 @@ public sealed class PowerOfAttorneyEMCHDData : PowerOfAttorneyData
 * `withNotary` -- доверенность удостоверена нотариусом.
 * `withTax` -- доверенность для взаимодействия с налоговыми органами.
 |===
+
+== Классы
+
+[cols=",",options="header"]
+|===
+|Имя |Описание
+
+|`xref:Entities/PowerOfAttorneyEMCHDData.AddressInfo_CL.adoc[AddressInfo]` |Сведения об адресе (АдрТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.BranchOfRussianEntityInfo_CL.adoc[BranchOfRussianEntityInfo]` |Сведения о филиале (обособленном подразделении) юридического лица (ФилПерПолн)
+|`xref:Entities/PowerOfAttorneyEMCHDData.ConfirmationOfAuthorityDocument_CL.adoc[ConfirmationOfAuthorityDocument]` |Документ, подтверждающий полномочия лица, действующего без доверенности (ДокПдтвТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.DelegatedPowerOfAttorneyPrincipal_CL.adoc[DelegatedPowerOfAttorneyPrincipal]` |Сведения о лице, передавшем полномочия (ПередПолн)
+|`xref:Entities/PowerOfAttorneyEMCHDData.FIO_CL.adoc[FIO]` |Фамилия, имя, отчество (при наличии) (ФИОТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.ForeignEntityInfo_CL.adoc[ForeignEntityInfo]` |Сведения об иностранном юридическом лице (СвИнОргТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.HandwrittenSignature_CL.adoc[HandwrittenSignature]` |Рукописная подпись (ПодпРукопис)
+|`xref:Entities/PowerOfAttorneyEMCHDData.IndividualInfo_CL.adoc[IndividualInfo]` |Сведения о физическом лице (СведФЛТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.IndividualPrincipalInfo1_CL.adoc[IndividualPrincipalInfo1]` |Сведения о физическом лице (ФЛПерПолн)
+|`xref:Entities/PowerOfAttorneyEMCHDData.IndividualPrincipalInfo_CL.adoc[IndividualPrincipalInfo]` |Сведения о физическом лице (доверителе) (ФЛДоверТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.IrrevocablePowerOfAttorneyInfo_CL.adoc[IrrevocablePowerOfAttorneyInfo]` |Сведения о безотзывной доверенности (Безотзыв)
+|`xref:Entities/PowerOfAttorneyEMCHDData.LegalEntityInfo_CL.adoc[LegalEntityInfo]` |Сведения о юридическом лице (или филиале (обособленном подразделении) юридического лица) (СвОргТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.MachineReadablePowerRestrictions_CL.adoc[MachineReadablePowerRestrictions]` |Сведения об ограничении (ограничениях) к полномочию (ОгрСвПолн)
+|`xref:Entities/PowerOfAttorneyEMCHDData.MachineReadablePowersInfo_CL.adoc[MachineReadablePowersInfo]` |Сведения о машиночитаемом полномочии (машиночитаемых полномочиях) (МашПолн)
+|`xref:Entities/PowerOfAttorneyEMCHDData.NotaryCertificateInfo_CL.adoc[NotaryCertificateInfo]` |Сведения о нотариальном удостоверении (СвНотУдТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.NotaryDeputyInfo_CL.adoc[NotaryDeputyInfo]` |ВРИО нотариуса (ВриоНотТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.NotaryInfo_CL.adoc[NotaryInfo]` |Сведения о нотариусе, совершившем нотариальное действие (СвНотДействТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyDocument_CL.adoc[PowerOfAttorneyDocument]` |Состав и структура документа (Документ)
+|`xref:Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyDocumentData_CL.adoc[PowerOfAttorneyDocumentData]` |Доверенность (Довер)
+|`xref:Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyInfo_CL.adoc[PowerOfAttorneyInfo]` |Сведения о доверенности (СвДовТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.PrincipalInfo_CL.adoc[PrincipalInfo]` |Сведения о доверителе (Доверит)
+|`xref:Entities/PowerOfAttorneyEMCHDData.PrincipalsInfo_CL.adoc[PrincipalsInfo]` |Сведения о доверителе (доверителях) (СвДоверит)
+|`xref:Entities/PowerOfAttorneyEMCHDData.RepresentativesInfo_CL.adoc[RepresentativesInfo]` |Сведения о представителе (представителях) (СвУпПредТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.RepresentativePowersInfo_CL.adoc[RepresentativePowersInfo]` |Сведения о полномочиях представителя (представителей) (СвПолнТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.RepresentativesInfo_CL.adoc[RepresentativesInfo]` |Сведения о представителе (представителях) (СвУпПредТип)
+
+|===
+
+== Перечисления
+
+[cols=",",options="header"]
+|===
+|Имя |Описание
+
+|`xref:Entities/PowerOfAttorneyEMCHDData.AuthorityType_EN.adoc[AuthorityType]` |Тип полномочия
+|`xref:Entities/PowerOfAttorneyEMCHDData.CitizenshipType_EN.adoc[CitizenshipType]` |Признак наличия гражданства
+|`xref:Entities/PowerOfAttorneyEMCHDData.EntityType_EN.adoc[EntityType]` |Тип лица, передавшего полномочия / тип представителя
+
+|`xref:Entities/PowerOfAttorneyEMCHDData.Gender_EN.adoc[Gender]` |Пол
+|`xref:Entities/PowerOfAttorneyEMCHDData.JointRepresentationType_EN.adoc[JointRepresentationType]` |Признак совместных полномочий
+
+|`xref:Entities/PowerOfAttorneyEMCHDData.NotarialActionParticipantStatus_EN.adoc[NotarialActionParticipantStatus]` |Статус участника нотариального действия
+
+|`xref:Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyForm_EN.adoc[PowerOfAttorneyForm]` |Форма доверенности
+
+|`xref:Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyKind_EN.adoc[PowerOfAttorneyKind]` |Вид доверенности
+
+|`xref:Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyLossOfAuthorityType_EN.adoc[PowerOfAttorneyLossOfAuthorityType]` |Признак утраты полномочий при передоверии
+
+|`xref:Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyOption_EN.adoc[PowerOfAttorneyOption]` |Признак доверенности
+
+|`xref:Entities/PowerOfAttorneyEMCHDData.PrincipalType_EN.adoc[PrincipalType]` |Тип доверителя
+
+|`xref:Entities/PowerOfAttorneyEMCHDData.RevocationCondition_EN.adoc[RevocationCondition]` |Условие отзыва доверенности
+
+|`xref:Entities/PowerOfAttorneyEMCHDData.RevocationPossibleType_EN.adoc[RevocationPossibleType]` |Признак безотзывной доверенности
+
+|`xref:Entities/PowerOfAttorneyEMCHDData.SoleExecutiveAuthorityType_EN.adoc[SoleExecutiveAuthorityType]` |Вид полномочий единоличного исполнительного органа
+
+|===
