--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSData_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSData_CL.adoc
@@ -1,6 +1,6 @@
 = PowerOfAttorneyFNSData -- класс
 
-Базовый класс сведений о доверенности в формате ФНС
+Базовый класс сведений о доверенности в формате ФНС.
 
 * *Пространство имён:* `xref:Entities/Entities_NS.adoc[DocsVision.BackOffice.ObjectModel.Services.Entities]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
@@ -12,7 +12,7 @@
 public abstract class PowerOfAttorneyFNSData : PowerOfAttorneyData
 ----
 
-== Свойства
+== Перечисления
 
 [cols=",",options="header"]
 |===
