--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyMachineReadableInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyMachineReadableInfo_CL.adoc
@@ -2,7 +2,7 @@
 
 Содержит информацию о МЧД.
 
-* *Пространство имён:* `xref:Platform-ObjectModel:ObjectModel_NS.adoc[DocsVision.BackOffice.ObjectModel]`
+* *Пространство имён:* `xref:Entities/Entities_NS.adoc[DocsVision.BackOffice.ObjectModel.Services.Entities]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
 
 == Синтаксис
@@ -45,7 +45,7 @@ List<string>)` |Создаёт новый экземпляр класса
 |`PowerOfAttorneyMachineReadableFileEncoding` |Кодировка файла МЧД
 |`RepresentativesSnils` |СНИЛСы представителей
 |`PrincipalsSnils` |СНИЛСы доверителей
-|`Representative` |Строковое представление представителя в формате ФИО (или ФИ) - для физлица, или названия организации - для юридического лица
+|`Representative` |Строковое представление представителя в формате ФИО (или ФИ) -- для физлица, или названия организации -- для юридического лица
 |`Signer` |Строковое представление подписанта в формате ФИО (или ФИ)
 |`RepresentativePowers` |Полномочия представителя
 |===
