--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVBBData_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVBBData_CL.adoc
@@ -1,6 +1,6 @@
 = PowerOfAttorneyFNSDOVBBData -- класс
 
-Сведения о доверенности ФНС в формате DOVBB. Содержит вложенные классы для работы с данными доверенности.
+Сведения о доверенности ФНС в формате DOVBB.
 
 * *Пространство имён:* `xref:Entities/Entities_NS.adoc[DocsVision.BackOffice.ObjectModel.Services.Entities]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
@@ -17,13 +17,111 @@ public sealed class PowerOfAttorneyFNSDOVBBData : PowerOfAttorneyFNSData
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`PowerOfAttorneyFNSDOVELData(Guid, string, string, string, PowerOfAttorneyDocumentData)`
-a|Инициализация данных доверенности.
+
+|`PowerOfAttorneyFNSDOVBBData(Guid, PowerOfAttorneyDocument, string)`
+a|Заполняет Сведения о доверенности
 
 .Параметры:
-* `powerOfAttorneyId` -- идентификатор доверенности
-* `recipientID` -- идентификатор получателя, которому направляется файл обмена
-* `finalRecipientID` -- идентификатор конечного получателя, для которого предназначена информация из данного файла обмена
-* `senderID` -- идентификатор отправителя информации
-* `document` -- состав и структура документа
+* `powerOfAttorneyNumber` -- Единый регистрационный номер доверенности
+* `document` -- Состав и структура документа
+* `otherInformation` -- Иные сведения
+
+|`override Guid GetPowerOfAttorneyNumber()` |Заполняет номер доверенности
+|`override DateTime GetPowerOfAttorneyStartDate()` |Заполняет дату выдачи доверенности
+|`override DateTime? GetPowerOfAttorneyEndDate()` |Заполняет дату окончания срок действия доверенности
+|`override PowerOfAttorneyRetrustType GetRetrustType()` |Заполняет тип передоверия
+|`override string GetPrincipal()` |Заполняет сведения о доверителе
+|`override string GetRepresentative()` |Заполняет сведения о лице, получившем полномочия
+|`override string GetSigner()` |Заполняет сведения о полписанте
+|`override string GetPowerOfAttorneyMachineReadableFileID()` |Заполняет идентификатор файла МЧД
+|`override List<Powers> GetRepresentativesPowers()` |Заполняет сведения о полномочиях представителя
+
+|===
+
+== Классы
+
+[cols=",",options="header"]
+|===
+|Имя |Описание
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.AddressInfo_CL.adoc[AddressInfo]` |Сведения об адресе (АдрТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.BasicPowerOfAttorneyInfo_CL.adoc[BasicPowerOfAttorneyInfo]` |Сведения об Основной доверенности (СвОснДовер)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.BasicPowerOfAttorneyPrincipalInfo_CL.adoc[BasicPowerOfAttorneyPrincipalInfo]` |Сведения о доверителе Основной доверенности (СвДовер0)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.BranchManagerInfo_CL.adoc[BranchManagerInfo]` |Сведения о руководителе обособленного подразделения (СвРукОП)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.ConfirmationOfAuthorityDocument_CL.adoc[ConfirmationOfAuthorityDocument]` |Реквизиты документа, подтверждающего полномочия (РеквДокПдтвТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.DelegatedAuthorityPrincipalInfo_CL.adoc[DelegatedAuthorityPrincipalInfo]` |Сведения о лице, передавшем полномочия (СвЛицПередПолн)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.ElectronicDocumentTransferMethod_CL.adoc[ElectronicDocumentTransferMethod]` |Способ передачи электронного нотариального документа (СпПрдЭНотДок)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.FIO_CL.adoc[FIO]` |Фамилия, имя, отчество (при наличии) (ФИОТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.ForeignEntityInfo_CL.adoc[ForeignEntityInfo]` |Сведения об иностранном юридическом лице (СвИнОргТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.ForeignLegalEntityPrincipalInfo_CL.adoc[ForeignLegalEntityPrincipalInfo]` |Сведения о доверителе – иностранном юридическом лице (ИнОргДовер)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.HandwrittenSignature_CL.adoc[HandwrittenSignature]` |Рукописная подпись (ПодпРукопис)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.IdentityCardOfIndividual_CL.adoc[IdentityCardOfIndividual]` |Сведения о документе, удостоверяющем личность физического лица (УдЛичнФЛТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.IndividualDelegatedAuthorityInfo_CL.adoc[IndividualDelegatedAuthorityInfo]` |Сведения о лице, передавшем полномочия – физическом лице (ФЛПрдПолн)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.IndividualInfo0_CL.adoc[IndividualInfo0]` |Сведения по физическому лицу (СвФЛ)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.IndividualInfo1_CL.adoc[IndividualInfo1]` |Сведения по физическому лицу (СвПоФЛ)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.IndividualInfo2_CL.adoc[IndividualInfo2]` |Сведения о физическом лице (СведФизЛТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.IndividualInfo_CL.adoc[IndividualInfo]` |Сведения о физическом лице (СведФЛТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.IndividualInfoBase_CL.adoc[IndividualInfoBase]` |Управляет получением сведений о физическом лице.
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.IndividualPrincipalInfo_CL.adoc[IndividualPrincipalInfo]` |Сведения о доверителе – физическом лице (ФЛДоверТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.IrrevocablePowerOfAttorneyInfo_CL.adoc[IrrevocablePowerOfAttorneyInfo]` |Сведения о безотзывной доверенности (БезотзывТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.LegalEntityInfo_CL.adoc[LegalEntityInfo]` |Сведения об организации (СвОргТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.LegalRepresentativeInfo_CL.adoc[LegalRepresentativeInfo]` |Сведения о законном представителе физического лица (СвЗакПредТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.NotaryCertificateInfo_CL.adoc[NotaryCertificateInfo]` |Сведения о нотариальном удостоверении (СвНотУдТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.NotaryDeputyInfo_CL.adoc[NotaryDeputyInfo]` |ВРИО нотариуса (ВриоНот)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.NotaryInfo_CL.adoc[NotaryInfo]` |Сведения о нотариусе, совершившем нотариальное действие (СвНотДейств)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.NotaryPaymentInfo_CL.adoc[NotaryPaymentInfo]` |Сведения об оплате за совершение нотариального действия (ОплатНотДейст)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.OrganizationInfo_CL.adoc[OrganizationInfo]` |Сведения об организации (СвОрг)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.PowerOfAttorneyDocument_CL.adoc[PowerOfAttorneyDocument]` |Состав и структура документа (Документ)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.PowerOfAttorneyDocumentData_CL.adoc[PowerOfAttorneyDocumentData]` |Доверенность (Довер)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.PowerOfAttorneyInfo_CL.adoc[PowerOfAttorneyInfo]` |Сведения доверенности (СвДовТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.PrincipalInfo_CL.adoc[PrincipalInfo]` |Сведения о доверителе (СвДоверит)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc[PrincipalWithoutPowerOfAttorneyInfo]` |Сведения о лице, действующем от имени юридического лица без доверенности (ЛицоБезДов)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.RepresentativeInfo_CL.adoc[RepresentativeInfo]` |Сведения об уполномоченном представителе (уполномоченных представителях) (СвУпПредТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.RepresentativePowerInfo_CL.adoc[RepresentativePowerInfo]` |Сведения о полномочиях представителя (представителей) (СвПолнТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.RetrustPowerOfAttorneyInfo_CL.adoc[RetrustPowerOfAttorneyInfo]` |Сведения доверенности, выданной в порядке передоверия (СвДовПер)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.RetrustPowerOfAttorneyInfoData_CL.adoc[RetrustPowerOfAttorneyInfoData]` |Передоверие (Передов)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.RussianEntityInfo_CL.adoc[RussianEntityInfo]` |Сведения о российском юридическом лице (СвРосОргТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.RussianLegalEntityPrincipalInfo_CL.adoc[RussianLegalEntityPrincipalInfo]` |Сведения о доверителе – российском юридическом лице (РосОргДовер)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.SoleProprietorInfo0_CL.adoc[SoleProprietorInfo0]` |Сведения об индивидуальном предпринимателе (СведИПТип)
+
+|`xref:Entities/PowerOfAttorneyFNSDOVBBData.SoleProprietorInfo1_CL.adoc[SoleProprietorInfo1]` |Сведения об индивидуальном предпринимателе (СвИПТип)
+
 |===
