--- a/modules/ROOT/partials/bo-om-services-entities.adoc
+++ b/modules/ROOT/partials/bo-om-services-entities.adoc
@@ -66,8 +66,93 @@
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RevocationPossibleType_EN.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.SoleExecutiveAuthorityType_EN.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSData_CL.adoc[]
+
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData_CL.adoc[]
+
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.AddressInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.BasicPowerOfAttorneyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.BasicPowerOfAttorneyPrincipalInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.BranchManagerInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.ConfirmationOfAuthorityDocument_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.DelegatedAuthorityPrincipalInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.ElectronicDocumentTransferMethod_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.FIO_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.ForeignEntityInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.ForeignLegalEntityPrincipalInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.HandwrittenSignature_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.IdentityCardOfIndividual_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.IndividualDelegatedAuthorityInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.IndividualInfo0_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.IndividualInfo1_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.IndividualInfo2_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.IndividualInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.IndividualInfoBase_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.IndividualPrincipalInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.IrrevocablePowerOfAttorneyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.LegalEntityInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.LegalRepresentativeInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.NotaryCertificateInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.NotaryDeputyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.NotaryInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.NotaryPaymentInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.OrganizationInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.PowerOfAttorneyDocument_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.PowerOfAttorneyDocumentData_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.PowerOfAttorneyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.PrincipalInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.RepresentativeInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.RepresentativePowerInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.RetrustPowerOfAttorneyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.RetrustPowerOfAttorneyInfoData_CL.adoc[]
+******** ref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.RussianEntityInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.RussianLegalEntityPrincipalInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.SoleProprietorInfo0_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVBBData.SoleProprietorInfo1_CL.adoc[]
+
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData_CL.adoc[]
+
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.AddressInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.BasicPowerOfAttorneyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.BasicPowerOfAttorneyPrincipalInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.BranchManagerInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.ConfirmationOfAuthorityDocument_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.DelegatedAuthorityPrincipalInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.ElectronicDocumentTransferMethod_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.FIO_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.ForeignEntityInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.ForeignLegalEntityPrincipalInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.HandwrittenSignature_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.IdentityCardOfIndividual_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.IndividualDelegatedAuthorityInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.IndividualInfo0_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.IndividualInfo1_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.IndividualInfo2_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.IndividualInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.IndividualInfoBase_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.IndividualPrincipalInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.IrrevocablePowerOfAttorneyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.LegalEntityInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.LegalRepresentativeInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.NotaryCertificateInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.NotaryDeputyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.NotaryInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.NotaryPaymentInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.OrganizationInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.PowerOfAttorneyDocument_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.PowerOfAttorneyDocumentData_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.PowerOfAttorneyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.PrincipalInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.RepresentativeInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.RepresentativePowerInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.RetrustPowerOfAttorneyInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.RetrustPowerOfAttorneyInfoData_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.RussianEntityInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.RussianLegalEntityPrincipalInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.SoleProprietorInfo0_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.SoleProprietorInfo1_CL.adoc[]
+
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyMachineReadableInfo_CL.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyVerification_CL.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/ImportESNSIResults_CL.adoc[]
